--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Barnabas Soh. It uses data from mapbox.com and weatherstack.com</p>
         <img class ="potrait" src="/img/ProfilePic.jpg">
     </div>
     
